--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
         <div class="section">
             <h2>Making Informed Decisions</h2>
-            <p>Ultimately, a <strong><a href="https://maps.google.com?q=Tobacco+Shop+in+Greenville+SC">Cigars Shop</a></strong> provides you with the knowledge, selection, and expertise needed to make informed decisions about your tobacco choices. Whether you're a newcomer or a seasoned smoker, having access to a knowledgeable staff and a diverse selection of products makes all the difference.</p>
+            <p>Ultimately, a <strong><a href="https://cloud-9-upstate.codeberg.page/vape-and-smoke/">Cigars Shop</a></strong> provides you with the knowledge, selection, and expertise needed to make informed decisions about your tobacco choices. Whether you're a newcomer or a seasoned smoker, having access to a knowledgeable staff and a diverse selection of products makes all the difference.</p>
         </div>
 
         <div class="section">
