--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="Rj6waGBM61ooN1EQsUPECPhon3tEU6dqWY85M9TRFRA" />
     <meta name="google-site-verification" content="AKJ5ZyyL9LsF5Zlea7hezsgU4Db3jCkFwt0KA9Rds4c" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
